vault sync: 2026-01-22 18:08 |  | 8 files
Affected files:
.obsidian/appearance.json
.obsidian/themes/Baseline/manifest.json
.obsidian/themes/Baseline/theme.css
.obsidian/themes/Border/manifest.json
.obsidian/themes/Border/theme.css
.obsidian/themes/Minimal/manifest.json
.obsidian/themes/Minimal/theme.css
JavaNotes/SSM/Spring.md

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,9 +1,9 @@
 {
-  "textFontFamily": "",
-  "enabledCssSnippets": [
-    "pdf"
-  ],
+  "textFontFamily": "仓耳今楷02",
+  "enabledCssSnippets": [],
   "translucency": false,
   "theme": "moonstone",
-  "accentColor": ""
+  "accentColor": "",
+  "cssTheme": "Baseline",
+  "interfaceFontFamily": "今楷"
 }
