vault sync: 2026-01-22 18:22 |  | 1 files
Affected files:
.obsidian/appearance.json

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -5,5 +5,7 @@
   "theme": "moonstone",
   "accentColor": "",
   "cssTheme": "Baseline",
-  "interfaceFontFamily": "今楷"
+  "interfaceFontFamily": "",
+  "monospaceFontFamily": "JetBrains Mono",
+  "nativeMenus": false
 }
