vault sync: 2026-01-22 18:46 |  | 3 files
Affected files:
.obsidian/appearance.json
Asserts/JetBrainsMono-Bold.ttf
Asserts/仓耳今楷02-W03.ttf

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -6,6 +6,6 @@
   "accentColor": "",
   "cssTheme": "Baseline",
   "interfaceFontFamily": "",
-  "monospaceFontFamily": "JetBrainsMono-Bold",
+  "monospaceFontFamily": "JetBrains Mono",
   "nativeMenus": false
 }
