vault sync: 2026-01-27 18:47 | mac | 5 files
Affected files:
.obsidian/appearance.json
JavaNotes/sky-take-out/前置开发/前置搭建.md
JavaNotes/sky-take-out/前置开发/数据库设计文档.md
JavaNotes/sky-take-out/员工相关接口开发/编辑员工.md
JavaNotes/sky-take-out/菜品相关接口开发/新增菜品.md

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -7,5 +7,6 @@
   "cssTheme": "Baseline",
   "interfaceFontFamily": "",
   "monospaceFontFamily": "JetBrains Mono",
-  "nativeMenus": false
+  "nativeMenus": false,
+  "showRibbon": true
 }
