--- a/.github/workflows/UpdateDashboard.yml
+++ b/.github/workflows/UpdateDashboard.yml
@@ -33,7 +33,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add README.md Assets/heatmap.svg 
+          git add Readme.md Assets/heatmap.svg 
           
           if [[ -n $(git status -s) ]]; then
             git commit -m "docs(stats): update heatmap and stats [skip ci]"
