--- a/.github/workflows/UpdateDashboard.yml
+++ b/.github/workflows/UpdateDashboard.yml
@@ -2,10 +2,12 @@ name: Update Knowledge Dashboard
 
 on:
   push:
+    branches:
+      - master
     paths:
       - '**.md'
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 0:00（北京时间 8:00）
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -19,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: master
         
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -28,16 +31,36 @@ jobs:
       - name: Run Stats Script
         run: python .github/scripts/update_stats.py
         
-      - name: Commit and Push
+      - name: Commit and Push to main
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add Readme.md Assets/heatmap.svg 
+          git add README.md assets/heatmap.svg
           
           if [[ -n $(git status -s) ]]; then
             git commit -m "docs(stats): update heatmap and stats [skip ci]"
-            git push
+            git push origin main
           else
             echo "No changes to commit"
+          fi
+      
+      # 同步 README 到 template 分支
+      - name: Sync README to template branch
+        run: |
+          # 切换到 template 分支
+          git fetch origin template
+          git checkout template
+          
+          # 从 master 分支复制更新后的 README 和 SVG
+          git checkout master -- README.md assets/heatmap.svg
+          
+          # 提交更改
+          git add README.md assets/heatmap.svg
+          
+          if [[ -n $(git status -s) ]]; then
+            git commit -m "sync: update README stats from main [skip ci]"
+            git push origin template
+          else
+            echo "No changes to sync"
           fi
