--- a/.github/workflows/WeeklyReviewGenerator.yml
+++ b/.github/workflows/WeeklyReviewGenerator.yml
@@ -24,7 +24,7 @@ jobs:
           
       - name: Install dependencies
         run: |
-          pip install openai requests
+          pip install openai
           
       - name: Generate weekly review
         env:
