Include PAT_TOKEN for PR creation
Add token for creating pull requests in workflow.

--- a/.github/workflows/WeeklyReviewGenerator.yml
+++ b/.github/workflows/WeeklyReviewGenerator.yml
@@ -49,6 +49,7 @@ jobs:
         if: steps.generate.outputs.has_review == 'true'  # 只在有周报时创建 PR
         uses: peter-evans/create-pull-request@v5
         with:
+          token: ${{ secrets.PAT_TOKEN }}
           branch: weekly-review-${{ steps.generate.outputs.week_num }}
           delete-branch: true
           
