--- a/.github/workflows/AutoSyncConfig.yml
+++ b/.github/workflows/AutoSyncConfig.yml
@@ -9,8 +9,8 @@ on:
       - '.obsidian/**'
       - 'Readme.md'
       - 'LICENSE'
-      - 'Assets/**'   
-      - '.github/workflows/sync-template.yml'
+      - 'Assets/**'
+      - '.github/workflows/AutoSyncConfig.yml'
 
 jobs:
   update-template:
@@ -20,9 +20,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: master
 
       - name: Configure Git
         run: |
@@ -31,45 +32,38 @@ jobs:
 
       - name: Sync content to template branch
         run: |
-          # 1. 切换/创建 template 分支
-          if git rev-parse --verify template >/dev/null 2>&1; then
+          git branch -D template 2>/dev/null || true
+          
+          if git ls-remote --exit-code --heads origin template >/dev/null 2>&1; then
+            git fetch origin template:template
             git checkout template
           else
             git checkout --orphan template
-            git rm -rf .
+            git rm -rf . 2>/dev/null || true
           fi
 
-          # 2. 清理旧文件
-          find . -maxdepth 1 ! -name '.git' ! -name '.' -exec rm -rf {} +
+          find . -maxdepth 1 ! -name '.git' ! -name '.' -exec rm -rf {} + 2>/dev/null || true
 
-          # 3. 从 master 检出内容
-          git checkout master -- .obsidian Readme.md LICENSE Assets
+          git checkout master -- .obsidian Readme.md LICENSE Assets 2>/dev/null || true
 
-          # 4. 生成 .gitignore
           echo "*.md" > .gitignore
           echo "!Readme.md" >> .gitignore
           echo "package-lock.json" >> .gitignore
 
-          # 5. 提交并生成动态 Commit Message
-          git add .
+          git add -A
           
-          # 检查是否有文件变化
           if git diff --staged --quiet; then
-            echo "配置没有变化，无需提交。"
-          else
-            
-            # 获取所有变更的文件列表
-            FILES=$(git diff --staged --name-only)
-            
-            # 提取变更的顶层目录或文件作为标题 (例如: .obsidian, Readme.md)
-            # 逻辑：取路径第一段 -> 去重 -> 用逗号连接
-            SUMMARY=$(echo "$FILES" | cut -d/ -f1 | sort -u | paste -sd ", " -)
-            
-            # 提交：
-            # -m 第一行是标题 (Subject)
-            # -m 第二行及之后是详细列表 (Body)
-            git commit -m "Auto-sync: 更新 $SUMMARY" -m "涉及的具体文件变动：
-            $FILES"
-            
+            echo "No changes detected"
+            exit 0
+          fi
+          
+          FILES=$(git diff --staged --name-only)
+          SUMMARY=$(echo "$FILES" | cut -d/ -f1 | sort -u | paste -sd ", " -)
+          
+          git commit -m "sync: update $SUMMARY" -m "Changed files:
+          
+          $FILES"
+          
+          if ! git push origin template --force-with-lease; then
             git push origin template --force
           fi
